Ajusted estilos y seccion dan carlton

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 				<!--<div class="fh5co-logo">
 					<a href="index.html">Cali Sabe Bien</a>
 				</div>-->
-				<div class="row">
+				<div class="row row-no-margin-bottom">
 
 
 					<div class="fh5co-menu-2">
@@ -203,18 +203,11 @@
 						<a href="#" data-nav-section="menu">Los Reblujos de Pati</a>
 						<a href="#" data-nav-section="reservation">Trucos de cocina para Navidad</a>
 						<a href="#" data-nav-section="features">Recetas tradicionales</a>
-						<a href="#" data-nav-section="home" class="logo-link-menu"><img src="images/logo3.svg" id="logomenu" style="padding: 7px;"></a>
+						<a href="#" data-nav-section="home" class="logo-link-menu"><img src="images/logo4.svg" id="logomenu"></a>
 					</div>
 				</div>
 			</div>
 		</div>
-
-
-
-
-
-
-
 
 		<div id="fh5co-contact" data-nav-section="danncarton">
 			<div class="container">
@@ -222,10 +215,10 @@
 				<div class="row">
 					<div class="col-md-12 headerseccion">
 						<img src="images/vino.png" class="iconoseccion" class="img-responsive">
-						<h2 class="tituloseccion tituloseccion-sombra1">Trucos de cocina para Navidad</h2>
+						<h2 class="tituloseccion tituloseccion-sombra1">Una experiencia de buen gusto para Navidad</h2>
 					</div>
 					<div class="col-md-12">
-						<p class="parrafoseccion parrafoseccioncolor1">Existen varios tips y consejos que puedes poner en práctica en estas fechas en las que todos queremos quedar como el anfitrión perfecto y dejar a los invitados encantados. Toma nota de nuestros 8 consejos para esta Navidad.</p>
+						<p class="parrafoseccion parrafoseccioncolor1">El complemento ideal para esta temporada de fin de año y Feria. Costillas y más costillas, de muchas y muy deliciosas maneras, preparadas como sólo el Tony Roma’s, experto mundial en Costillas, sabe hacerlo. ¡Para que te des todo el gusto del mundo!</p>
 					</div>
 
 					<div class="row">
@@ -236,53 +229,74 @@
 							</div>
 						</div>
 					</div>
-
+					<div class="row">
+						<div class="col-md-12 text-center">
+							<div class="card-panel  blue darken-1">
+								<span class="white-text">Sin duda el Tony Roma’s es el lugar ideal para disfrutar de las mejores carnes y de una excelente parrilla. En este diciembre lleno de ocasiones especiales, no te pierdas los mejores platos que sólo un restaurante de esta categoría puede ofrecer:</span>
+							</div>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col-md-4">
 
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image text-center">
+									<div class="fade-header"></div>
 									<img src="images/3.jpg">
-									<span class="card-title cards-title-shadow">Card Title</span>
+									<span class="card-title cards-title-shadow cards-title-small">Costilla Tradicional Tony Roma's</span>
 								</div>
-								<div class="card-content">
-									<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-								</div>
-								<div class="card-action">
-									<a href="#">This is a link</a>
-								</div>
+
 							</div>
 						</div>
 
 						<div class="col-md-4">
 
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image text-center">
+									<div class="fade-header"></div>
 									<img src="images/3.jpg">
-									<span class="card-title cards-title-shadow">Card Title</span>
+									<span class="card-title cards-title-shadow cards-title-small">Costilla Estilo St. Louis</span>
 								</div>
-								<div class="card-content">
-									<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-								</div>
-								<div class="card-action">
-									<a href="#">This is a link</a>
-								</div>
+
 							</div>
 						</div>
 
 						<div class="col-md-4">
 
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image text-center">
+									<div class="fade-header"></div>
 									<img src="images/3.jpg">
-									<span class="card-title cards-title-shadow">Card Title</span>
+									<span class="card-title cards-title-shadow cards-title-small">Costilla Jack Daniel's</span>
 								</div>
-								<div class="card-content">
-									<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+
+							</div>
+						</div>
+					</div>
+					<div class="row">
+
+
+						<div class="col-md-4">
+
+							<div class="card">
+								<div class="card-image text-center">
+									<div class="fade-header"></div>
+									<img src="images/3.jpg">
+									<span class="card-title cards-title-shadow cards-title-small">Lomo rostizado con salsa de tres quesos</span>
 								</div>
-								<div class="card-action">
-									<a href="#">This is a link</a>
+
+							</div>
+						</div>
+
+						<div class="col-md-4">
+
+							<div class="card">
+								<div class="card-image text-center">
+									<div class="fade-header"></div>
+									<img src="images/3.jpg">
+									<span class="card-title cards-title-shadow cards-title-small">Salmón al estilo Teriyaki</span>
 								</div>
+
 							</div>
 						</div>
 
@@ -311,7 +325,8 @@
 
 						<div class="col-md-4">
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image">
+									<div class="fade-header"></div>
 									<img src="images/recetas/manjar.jpg">
 									<span class="card-title cards-title-shadow">Manjar blanco</span>
 								</div>
@@ -340,7 +355,8 @@
 
 						<div class="col-md-4">
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image">
+									<div class="fade-header"></div>
 									<img src="images/recetas/hojaldra.jpg">
 									<span class="card-title cards-title-shadow">Hojaldres</span>
 								</div>
@@ -365,7 +381,8 @@
 						</div>
 						<div class="col-md-4">
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image">
+									<div class="fade-header"></div>
 									<img src="images/recetas/desamargado.jpg">
 									<span class="card-title cards-title-shadow">Desamargado</span>
 								</div>
@@ -399,7 +416,8 @@
 
 						<div class="col-md-4">
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image">
+									<div class="fade-header"></div>
 									<img src="images/recetas/natilla.jpg">
 									<span class="card-title cards-title-shadow">Natilla de maíz</span>
 								</div>
@@ -431,7 +449,8 @@
 
 						<div class="col-md-4">
 							<div class="card">
-								<div class="card-image"><div class="fade-header"></div>
+								<div class="card-image">
+									<div class="fade-header"></div>
 									<img src="images/recetas/bunuelos.jpg">
 									<span class="card-title cards-title-shadow">Buñuelos</span>
 								</div>
@@ -463,6 +482,38 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4">
+							<div class="card">
+								<div class="card-image">
+									<div class="fade-header"></div>
+									<img src="images/recetas/bunuelos.jpg">
+									<span class="card-title cards-title-shadow">Buñuelos</span>
+								</div>
+								<div class="card-content">
+									<blockquote>
+
+										<p><b>Ingredientes:</b></p>
+										<p>1 frasco de brevas en almíbar de 310 gr</p>
+										<p>250 gr. de harina</p>
+										<p>4 cucharadas de Arequipe</p>
+										<p>1 cucharada de mantequilla</p>
+										<p>2 huevos</p>
+										<p>Vainilla al gusto</p>
+										<p>200 gr. de crema de leche</p>
+
+									</blockquote>
+
+
+									<div id="rt-receta6" class="collapse cards-collapsed">
+										<p><strong>Preparación: </strong>Precalentar el horno a 170 grados. Cortar las brevas en cuartos. Mezclar la crema de leche con el arequipe, la mantequilla y la vainilla. Agregar los huevos, la harina y, por último, las brevas. Engrasar un molde
+											para horno o varios pequeños y llenar hasta un poco más de la mitad. Hornear de 25 a 30 minutos. Desmoldar la torta y espolvorear un poco de azúcar pulverizada o cubrir con pastillaje.</p>
+									</div>
+									<div class="cards-btn-center">
+										<a data-toggle="collapse" data-target="#rt-receta6" class="waves-effect waves-light btn">Preparación</a>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 
 
@@ -472,10 +523,10 @@
 		</div>
 
 
-
-		<div id="fh5co-footer">
+		<!-- FOOTER -->
+		<div class="footer">
 			<div class="container">
-				<div class="row row-padded">
+				<div class="row">
 
 					<div class="col-md-2 text-center">
 						<a href="http://elpais.com.co" target="_blank">
@@ -484,38 +535,39 @@
 
 					</div>
 
-					<div class="col-md-6 text-center">
+					<div class="col-md-7 text-center">
 
 
-						<p class="to-animate">El País S.A. © 2015 | Cra. 2 No.24-46 Tel. (+572) 8987000 | Cali, Colombia<br>
+						<p>El País S.A. © 2015 | Cra. 2 No.24-46 Tel. (+572) 8987000 | Cali, Colombia<br>
 							<a href="http://www.elpais.com.co/elpais/servicios/corporativos/privacidad" title="Política y tratamiento de datos" target="_blank">Política y Tratamiento de Datos</a> | <a href="http://www.elpais.com.co/elpais/servicios/corporativos/aviso-legal"
 							  title="Aviso Legal" target="_blank">Aviso Legal</a><br>Superintendencia de Industria y Comercio de Colombia
 					</div>
 
-					<div class="text-center">
-						<p class="to-animate">SÍGUENOS EN NUESTRAS REDES:</p>
+					<div class=" col-md-3 text-center">
+						<p>SÍGUENOS:</p>
 
 
 
 
 						<ul class="fh5co-social">
-							<li class="to-animate-2"><a href="http://www.facebook.com/diarioelpaiscali" title="Síguenos en Facebook" target="_blank"><i class="icon-facebook"></i></a></li>
-							<li class="to-animate-2"><a href="http://www.twitter.com/elpaiscali" title="Síguenos en Twitter" target="_blank"><i class="icon-twitter"></i></a></li>
-							<li class="to-animate-2"><a href="https://instagram.com/elpaiscali/" title="Síguenos en Instagram" target="_blank"><i class="icon-instagram"></i></a></li>
-							<li class="to-animate-2"><a href="http://www.pinterest.com/elpaiscali/boards/" title="Síguenos en Pinterest" target="_blank"><i class="icon-pinterest"></i></a></li>
-							<li class="to-animate-2"><a href="https://plus.google.com/115050330500575074656" title="Síguenos en Google+" target="_blank"><i class="icon-icon-gplus"></i></a></li>
+							<li><a href="http://www.facebook.com/diarioelpaiscali" title="Síguenos en Facebook" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="http://www.twitter.com/elpaiscali" title="Síguenos en Twitter" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://instagram.com/elpaiscali/" title="Síguenos en Instagram" target="_blank"><i class="icon-instagram"></i></a></li>
+							<li><a href="http://www.pinterest.com/elpaiscali/boards/" title="Síguenos en Pinterest" target="_blank"><i class="icon-pinterest"></i></a></li>
+							<li><a href="https://plus.google.com/115050330500575074656" title="Síguenos en Google+" target="_blank"><i class="icon-icon-gplus"></i></a></li>
 						</ul>
 
 
 
 					</div>
 
-					<div>
+					<div class="col-md-12 text-center">
 
 						<ul class="fh5co-social text-center">
-							<li class="to-animate-2"><strong>Investigación:</strong> Vivian Jaramillo Obando | Carlos Arango </li>
-							<li class="to-animate-2"><strong>Producción Multimedia:</strong> Andrés León Millán | Jose Reyes</li>
-							<li class="to-animate-2"><strong>Video:</strong> Carlos Salinas</li>
+							<li><strong>Dirección:</strong> Carlos Rojas M. </li>
+							<li><strong>Contenido:</strong> Vivian Jaramillo O. | Carlos Arango S. </li>
+							<li><strong>Diseño:</strong> Sebastián Gómez Z. | Carlos Arango S. </li>
+							<!--<li><strong>Video:</strong> Carlos Arango S.</li>-->
 						</ul>
 
 
