cambio titulo seccion

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 				<div class="row">
 					<div class="col-md-12 headerseccion">
-						<h2 class="tituloseccion tituloseccion-sombra1">¡Vive por lo alto esta Navidad!</h2>
+						<h2 class="tituloseccion tituloseccion-sombra1">¡Una Navidad por lo alto!</h2>
 					</div>
 					<div class="col-md-12">
 						<p class="parrafoseccion parrafoseccioncolor1">El complemento ideal para esta temporada de fin de año y Feria. Costillas y más costillas, de muchas y muy deliciosas maneras, preparadas como sólo el Tony Roma’s, experto mundial en Costillas, sabe hacerlo. ¡Para que te des todo el gusto del mundo!</p>
